src/objects/ICG_Account_Role_Detail__c.object
<CustomObject>
    <description>One Source Facilities</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>Account</description>
        <formula>Account_Role__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Pending_Approval__c</fullName>
        <description>Account pending for approval</description>
        <formula>Account_Role__r.Account__r.RecordType.Name = &apos;Standard Account&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account pending for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Account_Role__c</description>
        <label>Link to Station Account</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>ONE Source Stations</relationshipLabel>
        <relationshipName>ICG_Account_Role_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>Airmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airport_Authorization_Copy_1__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Airport Authorization Copy 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airport_Authorization_Copy_2__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Airport Authorization Copy 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_Languages__c</fullName>
        <description>Available languages</description>
        <label>Supported Languages (list)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Awadhi</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Balochi</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bhojpuri</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chewa</fullName>
                </value>
                <value>
                    <fullName>Chhattisgarhi</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chittagonian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Deccan</fullName>
                </value>
                <value>
                    <fullName>Dhundhari</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Eastern Min</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CargoCommoditiesCounter__c</fullName>
        <description>Formula to count commodities</description>
        <formula>IF(General_Cargo__c, 1, 0) + 
IF(Dangerous_Goods__c, 1, 0) + 
IF(Live_Animals__c, 1, 0) + 
IF( Airmail__c , 1, 0) + 
IF(Perishables__c, 1, 0) + 
IF(Pharmaceuticals__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CargoCommoditiesCounter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_FOR__c</fullName>
        <description>Formula to get the account business city . name</description>
        <formula>BLANKVALUE(Account_Role__r.Account__r.Business_City__r.Name, Account_Role__r.Account__r.Business_City_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Admin_Approver_Rejector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who has Approved or Rejected the station</description>
        <label>Company Admin Approver/Rejector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovedOrRejectedStations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_FOR__c</fullName>
        <description>Formula to get the account . name</description>
        <formula>Account_Role__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Certifications__c</fullName>
        <description>Count certifications</description>
        <label>Number of active Certifications</label>
        <summaryFilterItems>
            <field>ICG_Capability_Assignment_Group__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ICG_Capability_Assignment_Group__c.Is_Expired__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ICG_Capability_Assignment_Group__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Certification</value>
        </summaryFilterItems>
        <summaryForeignKey>ICG_Capability_Assignment_Group__c.ICG_Account_Role_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_FOR__c</fullName>
        <description>Formula to get the IATA_ISO_Country__r.Name</description>
        <formula>Account_Role__r.Account__r.IATA_ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Email__c</fullName>
        <description>Customer service email</description>
        <label>Customer Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Phone_Number__c</fullName>
        <description>Customer service phone number</description>
        <label>Customer Service Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dangerous_Goods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>Dangerous Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <description>Number of fleets</description>
        <label>Fleet (Number of Trucks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formatted_Address__c</fullName>
        <description>Format the address of a station</description>
        <formula>SUBSTITUTE(
IF( ISBLANK( Street_Nr_FOR__c ) , NULL,  Street_Nr_FOR__c + &quot;, &quot;) +
IF( ISBLANK(  Secondary_Address__c  ) , NULL,  Secondary_Address__c + &quot;, &quot;) +
IF( ISBLANK( Postal_Code_FOR__c ) ,NULL,  Postal_Code_FOR__c + &quot;, &quot;) +
IF( ISBLANK( State_Province_FOR__c ) ,NULL,  State_Province_FOR__c + &quot;, &quot;) +
IF(State_Province_FOR__c = City_FOR__c, NULL, IF( ISBLANK( City_FOR__c ) ,NULL,  City_FOR__c + &quot;, &quot;)) +
IF( ISBLANK( Country_FOR__c ) ,NULL,  Country_FOR__c + &quot;, &quot;) + &quot;.&quot;,
&quot;, .&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Cargo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>General Cargo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <description>global unique identifier</description>
        <displayFormat>aDV{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Global ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Hidden_Operating_Stations__c</fullName>
        <description>Technical Field. Operating Stations Id&apos;s that have to be hidden in the Operating XXX section of the Airport Operators</description>
        <label>Hidden Operating Stations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to IATA_ISO_Country__c object</description>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>ONE Source Account Role Details</relationshipLabel>
        <relationshipName>ICG_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Icon_Company_Type__c</fullName>
        <description>Display image depending on the record type</description>
        <formula>IF(RecordType.DeveloperName = &apos;Airline&apos; , &quot;/resource/1567067723000/icons/company_type/airline.svg&quot;, 
IF(RecordType.DeveloperName = &apos;Airport_Operator&apos; , &quot;/resource/1567067723000/icons/company_type/airport-operator.svg&quot;, 
IF(RecordType.DeveloperName = &apos;Freight_Forwarder&apos; , &quot;/resource/1567067723000/icons/company_type/freight-forwarder.svg&quot;, 
IF(RecordType.DeveloperName = &apos;Trucker&apos; , &quot;/resource/1567067723000/icons/company_type/trucker.svg&quot;, 
IF(RecordType.DeveloperName = &apos;Cargo_Handling_Facility&apos; , &quot;/resource/1567067723000/icons/company_type/Cargo-Handling-Facility.svg&quot;, 
IF(RecordType.DeveloperName = &apos;Ramp_Handler&apos; , &quot;/resource/1567067723000/icons/company_type/ramp-handler.svg&quot;, 
IF(RecordType.DeveloperName = &apos;Shipper&apos; , &quot;/resource/1567067723000/icons/company_type/shipper.svg&quot;,&quot;&quot;)
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>company type icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Direct_Ramp_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>Direct Ramp Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_On_Airport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>On Airport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Animals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>Live Animals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nearest_Airport_Code__c</fullName>
        <description>Indicates the Airport Code</description>
        <formula>Nearest_Airport__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nearest Airport Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Airport_Detail to get the nearest airport</description>
        <label>Nearest Airport</label>
        <referenceTo>Airport_Detail__c</referenceTo>
        <relationshipLabel>ONE Source Account Role Details</relationshipLabel>
        <relationshipName>ICG_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <description>Number of employees</description>
        <label>Number of Employees (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Facilities__c</fullName>
        <description>Number of facilities</description>
        <label>Number of Facilities (wharehouses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Booking_System_Link__c</fullName>
        <description>Online Booking System Link</description>
        <label>Online Booking System Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opening_Hours__c</fullName>
        <description>Longtext area to storage the info related to the opening hours of the station</description>
        <label>Opening Hours</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Airport_Size__c</fullName>
        <description>Describe the airport size in m2</description>
        <label>Overall Airport Size (in m2)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Facility_Size_m2__c</fullName>
        <description>Describe the facility size in m2</description>
        <label>Overall Facility Space (in m2)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perishables__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>Perishables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharmaceuticals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>Pharmaceuticals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pilot_Information__c</fullName>
        <description>Pilot Information</description>
        <label>Pilot Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Postal_Code_FOR__c</fullName>
        <description>Displays the account business postal code</description>
        <formula>Account_Role__r.Account__r.Business_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <description>Reason of the request was rejected</description>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Road_Feeder_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this service is available</description>
        <label>Road Feeder Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_By_City__c</fullName>
        <description>Used by search engine to avoid confusion with special characters when the search is by city</description>
        <label>city search engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_By_Company__c</fullName>
        <description>Used by search engine to avoid confusion with special characters when the search is by company name</description>
        <label>company name search engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_By_Country__c</fullName>
        <description>Used by search engine to avoid confusion with special characters when the search is by country</description>
        <label>country search engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Address__c</fullName>
        <description>Used to display the second build of the facility</description>
        <label>Second Address Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_FOR__c</fullName>
        <description>Displays the account business state name</description>
        <formula>Account_Role__r.Account__r.Business_State_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Geo_Coordinates__c</fullName>
        <description>Geo Coordinates of the station</description>
        <label>Station Geo Coordinates</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist related to the status of the facility</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Pending for IATA Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Nr_FOR__c</fullName>
        <description>Displays the account business street</description>
        <formula>Account_Role__r.Account__r.Business_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street + Nr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Detail_Check_JSON__c</fullName>
        <description>Summary Detail Check JSON</description>
        <label>Summary Detail Check JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>To storage the website url</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <description>Checkbox to determine if the facility is approved</description>
        <formula>ISPICKVAL(Status__c ,&quot;Approved&quot;) &amp;&amp; Account_Role__r.Account__r.RecordType.DeveloperName != &apos;Standard_Account&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPendingApproval__c</fullName>
        <description>Checkbox to determine if the facility is pending for approval</description>
        <formula>ISPICKVAL( Status__c , &quot;Pending for Approval&quot;) || ISPICKVAL( Status__c , &quot;Pending for IATA Approval&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPendingApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>logoUrl__c</fullName>
        <description>Storages the logo of the facility</description>
        <label>logoUrl</label>
        <type>Url</type>
    </fields>
    <label>OS Account Role Detail</label>
    <listViews>
        <fullName>Account_pending_for_IATA_approval</fullName>
        <columns>NAME</columns>
        <columns>Account_Role__c</columns>
        <columns>Company_FOR__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IATA_ISO_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Account pending for IATA approval</label>
    </listViews>
    <listViews>
        <fullName>Airline_Stations</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>City_FOR__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Airmail__c</columns>
        <columns>General_Cargo__c</columns>
        <columns>Live_Animals__c</columns>
        <columns>Perishables__c</columns>
        <columns>Pharmaceuticals__c</columns>
        <columns>Dangerous_Goods__c</columns>
        <columns>Road_Feeder_Services__c</columns>
        <columns>Number_of_Employees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ICG_Account_Role_Detail__c.Airline</value>
        </filters>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Airline Stations</label>
    </listViews>
    <listViews>
        <fullName>Airport_Operator_Stations</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>City_FOR__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Airmail__c</columns>
        <columns>General_Cargo__c</columns>
        <columns>Live_Animals__c</columns>
        <columns>Perishables__c</columns>
        <columns>Pharmaceuticals__c</columns>
        <columns>Dangerous_Goods__c</columns>
        <columns>Number_of_Employees__c</columns>
        <columns>Overall_Airport_Size__c</columns>
        <columns>Pilot_Information__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ICG_Account_Role_Detail__c.Airport_Operator</value>
        </filters>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Airport Operator Stations</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>City_FOR__c</columns>
        <columns>Country_FOR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cargo_Handling_Facility_Stations</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>City_FOR__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Airmail__c</columns>
        <columns>General_Cargo__c</columns>
        <columns>Live_Animals__c</columns>
        <columns>Perishables__c</columns>
        <columns>Pharmaceuticals__c</columns>
        <columns>Dangerous_Goods__c</columns>
        <columns>Number_of_Employees__c</columns>
        <columns>Overall_Facility_Size_m2__c</columns>
        <columns>Is_On_Airport__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ICG_Account_Role_Detail__c.Cargo_Handling_Facility</value>
        </filters>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Cargo Handling Facility Stations</label>
    </listViews>
    <listViews>
        <fullName>Freight_Forwarder_Stations</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>City_FOR__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Airmail__c</columns>
        <columns>General_Cargo__c</columns>
        <columns>Live_Animals__c</columns>
        <columns>Perishables__c</columns>
        <columns>Pharmaceuticals__c</columns>
        <columns>Dangerous_Goods__c</columns>
        <columns>Number_of_Employees__c</columns>
        <columns>Is_On_Airport__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ICG_Account_Role_Detail__c.Freight_Forwarder</value>
        </filters>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Freight Forwarder Stations</label>
    </listViews>
    <listViews>
        <fullName>ICG_Stakeholders_ICG_Account_Role_Detail</fullName>
        <filterScope>Queue</filterScope>
        <label>OneSource Stakeholders</label>
        <queue>ICG_Stakeholders</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_for_approval</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>City_FOR__c</columns>
        <columns>Country_FOR__c</columns>
        <columns>Customer_Service_Email__c</columns>
        <columns>Customer_Service_Phone_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending for Approval,Pending for IATA Approval</value>
        </filters>
        <label>Pending for approval</label>
    </listViews>
    <listViews>
        <fullName>Ramp_Handler_Stations</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>City_FOR__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Airmail__c</columns>
        <columns>General_Cargo__c</columns>
        <columns>Live_Animals__c</columns>
        <columns>Perishables__c</columns>
        <columns>Pharmaceuticals__c</columns>
        <columns>Dangerous_Goods__c</columns>
        <columns>Number_of_Employees__c</columns>
        <columns>Overall_Facility_Size_m2__c</columns>
        <columns>Is_On_Airport__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ICG_Account_Role_Detail__c.Ramp_Handler</value>
        </filters>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Ramp Handler Stations</label>
    </listViews>
    <listViews>
        <fullName>Shipper_Stations</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>Airmail__c</columns>
        <columns>General_Cargo__c</columns>
        <columns>Live_Animals__c</columns>
        <columns>Perishables__c</columns>
        <columns>Pharmaceuticals__c</columns>
        <columns>Dangerous_Goods__c</columns>
        <columns>City_FOR__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ICG_Account_Role_Detail__c.Shipper</value>
        </filters>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Shipper Stations</label>
    </listViews>
    <listViews>
        <fullName>Stations_pending_for_IATA_approval</fullName>
        <columns>NAME</columns>
        <columns>Account_Role__c</columns>
        <columns>Company_FOR__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IATA_ISO_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Approved</value>
        </filters>
        <label>Stations pending for IATA approval</label>
    </listViews>
    <listViews>
        <fullName>Trucker_Stations</fullName>
        <columns>NAME</columns>
        <columns>Company_FOR__c</columns>
        <columns>City_FOR__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Airmail__c</columns>
        <columns>General_Cargo__c</columns>
        <columns>Live_Animals__c</columns>
        <columns>Perishables__c</columns>
        <columns>Pharmaceuticals__c</columns>
        <columns>Dangerous_Goods__c</columns>
        <columns>Number_of_Employees__c</columns>
        <columns>Fleet__c</columns>
        <columns>Is_On_Airport__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ICG_Account_Role_Detail__c.Trucker</value>
        </filters>
        <filters>
            <field>Account_Pending_Approval__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Trucker Stations</label>
    </listViews>
    <nameField>
        <label>ONE Source Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OS Account Role Detail</pluralLabel>
    <recordTypes>
        <fullName>Airline</fullName>
        <active>true</active>
        <label>Airline</label>
    </recordTypes>
    <recordTypes>
        <fullName>Airport_Operator</fullName>
        <active>true</active>
        <label>Airport Operator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cargo_Handling_Facility</fullName>
        <active>true</active>
        <label>Cargo Handling Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freight_Forwarder</fullName>
        <active>true</active>
        <label>Freight Forwarder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ramp_Handler</fullName>
        <active>true</active>
        <label>Ramp Handler</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shipper</fullName>
        <active>true</active>
        <label>Shipper</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trucker</fullName>
        <active>true</active>
        <label>Trucker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Number_Of_Employees_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>The number of employees cannot be negative</description>
        <errorConditionFormula>Number_of_Employees__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Number_of_Employees__c</errorDisplayField>
        <errorMessage>Number of employees cannot be a negative number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Of_Facilities_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>The number of facilities cannot be negative.</description>
        <errorConditionFormula>Number_of_Facilities__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Number_of_Facilities__c</errorDisplayField>
        <errorMessage>The number of facilities cannot be negative</errorMessage>
    </validationRules>
</CustomObject>